драг энд дроп и прочие радости

--- a/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-explorer.xhtml
@@ -11,7 +11,7 @@
     <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />
     
     <ui:define name="specDetailColumns">
-        <p:column headerText="#{bundle.Pattern}" sortBy="#{item.pattern}">
+        <p:column headerText="#{bundle.Pattern}" >
             #{item.pattern}
         </p:column>
     </ui:define>   
