--- a/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
@@ -15,7 +15,7 @@
                  selection="#{_bean.checkedItems}">
 
         <f:facet name="header">
-            <p:outputLabel value="#{_bean.jurnalHeader}" />           
+            <p:outputLabel value="#{_bean.jurnalHeader}" />             
         </f:facet>
         
         <p:ajax event="rowSelect" update="mainFRM:explToolBar" oncomplete="initDND();" />
@@ -28,11 +28,11 @@
         
         <p:column id="colCheck" width="16" selectionMode="multiple" style="text-align:center"/>
         
-        <p:column id="colIcon" width="16" sortBy="#{item.iconName}" priority="3">
+        <p:column id="colIcon" width="16" sortBy="#{item.iconName}" priority="3" visible="#{_detailBean.isVisibleColumn('colIcon')}">
             <p:graphicImage id="itemIcon" value="/resources/icon/#{item.iconName}.png" styleClass="#{item.deleted ? '' : 'dropoint'}"/> 
         </p:column>
 
-        <p:column id="colName" headerText="#{bundle.Name}" sortBy="#{item.name}" width="135" >
+        <p:column id="colName" headerText="#{bundle.Name}" sortBy="#{item.name}" width="135" visible="#{_detailBean.isVisibleColumn('colName')}">
             <p:commandLink value="#{item.nameEndElipse}" title="#{item.name}" 
                            rendered="#{_bean.isItemTreeType(item)}"
                            actionListener="#{_bean.onLoadGroupContent(item)}"
@@ -48,25 +48,34 @@
         <ui:insert name="specTreeColumns"/>
         <ui:insert name="specRootColumns"/>
         
-        <p:column width="16" id="colStateIcon" sortBy="#{item.stateName}" priority="4">
+        <p:column width="16" id="colStateIcon" priority="4" 
+                  visible="#{_detailBean.isVisibleColumn('colStateIcon')}"
+                  sortBy="#{item.stateName}">
             <h:graphicImage id="iconDone" value="#{item.state.currentState.icon}" title="#{stateBean.getBundleName(item.state.currentState)}"/>            
         </p:column>
         
-        <p:column id="colDateChange" headerText="#{bundle.DateChange}" width="80" priority="3" styleClass="columnExt1" sortBy="#{item.dateChange}">
+        <p:column id="colDateChange" headerText="#{bundle.DateChange}" width="80" priority="3" styleClass="columnExt1" 
+                  visible="#{_detailBean.isVisibleColumn('colDateChange')}"
+                  sortBy="#{item.dateChange}">
             <h:outputLabel value="#{item.dateChange}">
                 <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
             </h:outputLabel>
         </p:column>
 
         <p:column id="colDateCreate" headerText="#{bundle.DateCreate}"                   
-                  rendered="#{_showDateCreate}"
-                  width="80" priority="4" styleClass="columnExt2" sortBy="#{item.dateCreate}">
+                  rendered="#{_showDateCreate}"                  
+                  width="80" priority="4" styleClass="columnExt2" 
+                  visible="#{_detailBean.isVisibleColumn('colDateCreate')}"
+                  sortBy="#{item.dateCreate}">
             <h:outputLabel value="#{item.dateCreate}">
                 <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
             </h:outputLabel>
         </p:column>
 
-        <p:column id="colAuthor" headerText="#{bundle.Owner}" rendered="#{_showAuthor}" width="80" priority="5" styleClass="columnExt2" sortBy="#{item.authorName}">
+        <p:column id="colAuthor" headerText="#{bundle.Owner}" rendered="#{_showAuthor}" 
+                  width="80" priority="5" styleClass="columnExt2" 
+                  visible="#{_detailBean.isVisibleColumn('colAuthor')}"
+                  sortBy="#{item.authorName}">
             #{item.author.shortFIO}
         </p:column>
 
